--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
                 <ul>
-                    <li>Mission</li>
+                    <li><a href="#mission">Mission</a></li>
                     <li>Featured Tea</li>
                     <li>Locations</li>
                 </ul>
