--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
                 <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
                 <ul>
                     <li><a href="#mission">Mission</a></li>
-                    <li>Featured Tea</li>
-                    <li>Locations</li>
+                    <li><a href="#feature">Featured Tea</a></li>
+                    <li><a href="#store">Locations</a></li>
                 </ul>
             </div>
         </header>
